--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,6 @@ Imports:
     usethis
 Remotes:
     bioc::3.17/ConnectivityMap,
-    oganm/ogbox,
-    oganm/MSigDB@4990275
+    oganm/ogbox
 Depends: 
     R (>= 2.10)
